--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngx-loading-bar/http-client": "^1.1.1",
     "angular-font-awesome": "^3.1.1",
     "angular-in-memory-web-api": "^0.5.2",
     "core-js": "^2.4.1",
